--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
           "postinstall": "prisma generate"
      },
      "dependencies": {
+          "@clerk/nextjs": "^6.12.3",
           "@prisma/client": "^6.4.1",
           "@radix-ui/react-alert-dialog": "^1.1.6",
           "@radix-ui/react-compose-refs": "^1.1.1",
