--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
           "react-icons": "^5.5.0",
           "react-simple-typewriter": "^5.0.1",
           "tailwind-merge": "^3.0.2",
-          "tailwindcss-animate": "^1.0.7"
+          "tailwindcss-animate": "^1.0.7",
+          "use-debounce": "^10.0.4"
      },
      "devDependencies": {
           "@eslint/eslintrc": "^3",
