--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
           "@tanstack/react-table": "^8.20.6",
           "class-variance-authority": "^0.7.1",
           "clsx": "^2.1.1",
+          "date-fns": "^3.6.0",
           "framer-motion": "^12.4.7",
           "lucide-react": "^0.475.0",
           "next": "15.1.7",
           "next-themes": "^0.4.4",
           "react": "^19.0.0",
+          "react-day-picker": "^8.10.1",
           "react-dom": "^19.0.0",
           "react-hot-toast": "^2.5.2",
           "react-icons": "^5.5.0",
           "react-simple-typewriter": "^5.0.1",
           "tailwind-merge": "^3.0.2",
           "tailwindcss-animate": "^1.0.7",
-          "use-debounce": "^10.0.4"
+          "use-debounce": "^10.0.4",
+          "zod": "^3.24.2"
      },
      "devDependencies": {
           "@eslint/eslintrc": "^3",
