--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
           "react-hot-toast": "^2.5.2",
           "react-icons": "^5.5.0",
           "react-simple-typewriter": "^5.0.1",
+          "recharts": "^2.15.1",
           "tailwind-merge": "^3.0.2",
           "tailwindcss-animate": "^1.0.7",
           "use-debounce": "^10.0.4",
