--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
           "@radix-ui/react-separator": "^1.1.2",
           "@radix-ui/react-slot": "^1.1.2",
           "@radix-ui/react-tooltip": "^1.1.8",
-          "@react-email/components": "^0.0.32",
+          "@react-email/components": "^0.0.13",
           "@tanstack/react-query": "^5.67.2",
           "@tanstack/react-table": "^8.20.6",
           "class-variance-authority": "^0.7.1",
@@ -29,7 +29,7 @@
           "date-fns": "^3.6.0",
           "framer-motion": "^12.4.7",
           "lucide-react": "^0.475.0",
-          "next": "15.1.7",
+          "next": "^15.2.4",
           "next-themes": "^0.4.4",
           "react": "^19.0.0",
           "react-day-picker": "^8.10.1",
@@ -38,6 +38,7 @@
           "react-icons": "^5.5.0",
           "react-simple-typewriter": "^5.0.1",
           "recharts": "^2.15.1",
+          "resend": "^4.1.2",
           "tailwind-merge": "^3.0.2",
           "tailwindcss-animate": "^1.0.7",
           "use-debounce": "^10.0.4",
