--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@react-email/components": "^0.0.13",
+        "@react-email/components": "^0.0.36",
         "@tanstack/react-query": "^5.67.2",
         "@tanstack/react-table": "^8.20.6",
         "class-variance-authority": "^0.7.1",
@@ -31,9 +31,9 @@
         "lucide-react": "^0.475.0",
         "next": "^15.2.4",
         "next-themes": "^0.4.4",
-        "react": "^18.2.0",
-        "react-day-picker": "^8.10.1",
-        "react-dom": "^18.2.0",
+        "react": "^19.0.0",
+        "react-day-picker": "^9.6.5",
+        "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
         "react-simple-typewriter": "^5.0.1",
@@ -47,13 +47,16 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.1.7",
         "postcss": "^8",
         "prisma": "^6.5.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
+    },
+    "overrides": {
+        "react-is": "^19.0.0-rc-69d4b800-20241021"
     }
 }
